# quant-research-apprenticeship

./: .gitignore  pyproject.toml
src/qr_apprentice/: returns.py
tests/: test_returns.py
