[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "qr-apprentice"
version = "0.1.0"
description = "A developing quantitative research toolkit."
requires-python = ">=3.12"
dependencies = [
    "pandas"
]

[tool.setuptools.packages.find]
where = ["src"]